--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": [["env", {"targets": {"node": "current"}}], "react"],
+  "presets": [["@babel/env",{"targets": {"node": "current"}}], "@babel/react"],
   "plugins": ["transform-class-properties"]
 }
