--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
+    "history": "^4.9.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router": "^5.0.0",
